# AxonEngine

./: .gitignore  Axon.h  AxonEngine.cpp  AxonEngine.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  entrypoint.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-checks.yml  cmake-crossplatform.yml  cmake-multi-platform.yml  cmake-project.yml  comments.yml  dockertest.yml  linux-build.yml  macos-build.yml  pull-request-checker.yml  windows-build.yml
AxonLibrary/: AxonBackend.h  AxonMasterInclude.h
AxonLibrary/client/: AxonClient.cpp  AxonClient.h  client_connection.cpp  client_connection.h
AxonLibrary/common/serialization/: serialization.c  serialization.h
AxonLibrary/server/: AxonServer.cpp  AxonServer.h  server_connection.cpp  server_connection.h  server_constants.h
Include/: Axon.h  AxonConnectionHandler.h  AxonEngine.cpp  AxonEngine.h  AxonEntity.cpp  AxonEntity.h  AxonError.cpp  AxonError.h  AxonMasterInclude.h  AxonTypes.cpp  AxonTypes.h
backends/: backend.h
backends/berkeley/: basic_networking.c  basic_networking.h  master_include.h
build-scripts/server/: post-build.bat
client/: AxonClient.h  client_connection.cpp  client_connection.h
client/backends/unix/: unixclient.cpp  unixclient.h
client/backends/win/: winclient.cpp  winclient.h
client/win/: winclient.cpp  winclient.h
cmake/: build-utils.cmake
common/: AxonError.h  AxonTypes.cpp  AxonTypes.h  AxonUtility.h  CMakeLists.txt
common/backends/: backend.cpp  backend.hpp
common/backends/berkeley/: basic_networking.c  basic_networking.h  master_include.h
common/backends/berkeley/tcp/: tcp_connection.c  tcp_connection.h
common/backends/berkeley/udp/: udp_connection.c  udp_connection.h
common/events/: AxonEvent.cpp  AxonEvent.hpp  AxonEvent.ipp
common/networking/: AxonMessage.hpp  AxonNetwork.cpp  AxonNetwork.hpp
common/networking/AxonMessage/: AxonMessage.hpp
common/networking/message/: AxonMessage.cpp  AxonMessage.hpp
common/networking/networking-core/: Synaps.cpp  Synaps.hpp  Synapse.cpp  Synapse.hpp
common/serialization/: serialization.c  serialization.h  serialization.hpp
conan/: conanfile.py  conanfile.txt  install-deps.sh
debug-executables/: client.cpp  server.cpp
examples/: CMakeLists.txt  README.md
examples/01. basic-nogui/: CMakeLists.txt  client.cpp  server.cpp
examples/02. basic-gui/: CMakeLists.txt  client.cpp  server.cpp
examples/axon-api/: CMakeLists.txt
examples/axon-api/axon-networking/: CMakeLists.txt
examples/axon-api/chat/: CMakeLists.txt  client.cpp  server.cpp
examples/axon-api/ping/: CMakeLists.txt  README.md  client.cpp  common.h  server.cpp
examples/basic-gui/: CMakeLists.txt
examples/basics/: CMakeLists.txt
examples/basics/basic-axon-networking/: CMakeLists.txt  client.cpp  server.cpp
examples/basics/basic-init/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
examples/basics/basic-init/tcp/: CMakeLists.txt  client.cpp  server.cpp
examples/basics/basic-init/udp/: CMakeLists.txt  client.cpp  server.cpp
examples/basics/basic-synaps/: CMakeLists.txt  client.cpp  server.cpp
examples/basics/basic-synapse/: CMakeLists.txt  client.cpp  server.cpp
include/: common_macro.h  custom_utility.h  netconfig.h
libraries/: AxonUtility.h  CMakeLists.txt  SynapseConfig.h
libraries/backends/: CMakeLists.txt  backend.cpp  backend.hpp
libraries/backends/berkeley/: basic_networking.h  master_include.h
libraries/backends/berkeley/tcp/: tcp_connection.c  tcp_connection.h
libraries/backends/berkeley/udp/: udp_connection.c  udp_connection.h
libraries/events/: AxonEvent.cpp  AxonEvent.hpp  AxonEvent.ipp  CMakeLists.txt
libraries/messages/: AxonBinaryStream.hpp  AxonMessage.cpp  AxonMessage.hpp  CMakeLists.txt
libraries/networking/: AxonLibrary.hpp  AxonNetwork.cpp  AxonNetwork.hpp  AxonNetwork.ipp  AxonNetworkObject.cpp  AxonNetworkObject.hpp  CMakeLists.txt
libraries/networking/message/: AxonBinaryStream.cpp  AxonBinaryStream.hpp  AxonMessage.cpp  AxonMessage.hpp
libraries/networking/networking-core/: BasicSynapse.hpp  BasicSynapse.ipp  Synapse.cpp  Synapse.hpp  Synapse.ipp  SynapseEvents.hpp  SynapseUtility.cpp  SynapseUtility.hpp
libraries/networking/synapse/: BasicSynapse.hpp  BasicSynapse.ipp  Synapse.hpp  Synapse.ipp  SynapseInterface.hpp
libraries/networking/synapse/netcontroller/: AxonNetworkController.hpp  AxonNetworkController.ipp
libraries/networking/synapse/utils/: SynapseEvents.cpp  SynapseEvents.hpp  SynapseUtility.cpp  SynapseUtility.hpp
libraries/networking/utility/: AxonNetworkPointer.cpp  AxonNetworkPointer.hpp  AxonNetworkPointer.ipp  MessagePool.cpp  MessagePool.hpp  MessageProcessor.cpp  MessageProcessor.hpp
libraries/serialization/: CMakeLists.txt  serialization.c  serialization.h
server/: server.h  server_connection.cpp  server_connection.h  server_constants.h  transport.cpp  transport.h
server/backends/unix/: unixtransport.cpp  unixtransport.h
server/backends/win/: wintransport.cpp  wintransport.h
server/win/: wintransport.cpp  wintransport.h
tests/: CMakeLists.txt  test_entities.cxx  test_serialization.cxx
tests/basic_checks/: CMakeLists.txt  test_event_system.cxx  test_serialization.cxx
tests/docker-test/: compose.yaml
tests/docker-test/client/: Dockerfile
tests/docker-test/entrypoint/: client.cpp  server.cpp
tests/docker-test/server/: Dockerfile
tests/gtest/: CMakeLists.txt  test_data_buffer.cpp  test_event_system.cpp  test_google_framework.cpp  test_message_pool.cpp  test_network_pointer.cpp  test_networking.cpp  test_serialization.cpp  test_synapse.cpp
tests/gtest/FakeNetworkController/: FakeNetworkController.hpp  FakeNetworkController.ipp
tests/performance/: CMakeLists.txt  perf_message_api.cpp  perf_serialization.cpp  perf_synapse.cpp  perftest.hpp
tests/utils/testutils/: CMakeLists.txt
tests/utils/testutils/FakeNetworkController/: FakeNetworkController.cpp  FakeNetworkController.hpp
tests/utils/testutils/MemoryGuard/: MemoryGuard.cpp  MemoryGuard.hpp  memutils.c  memutils.h
(+10 files in other folders)
